--- a/grid_index.html
+++ b/grid_index.html
@@ -8,9 +8,12 @@
 </head>
 
     <body>
+      <div class="menu">
+      </div>
 
+      <div class="main">
+      </div>    
 
 
    </body>
 </html>
-     
