--- a/grid_index.html
+++ b/grid_index.html
@@ -8,11 +8,61 @@
 </head>
 
     <body>
-      <div class="menu">
+    <div class="row">
+      <div class="col col-2">
+
       </div>
 
-      <div class="main">
-      </div>    
+      <div class="col col-2">
+
+      </div>
+
+      <div class="col col-2">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col-4">
+
+      </div>
+
+      <div class="col col-4">
+
+      </div>
+
+      <div class="col col-4">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col-6">
+
+      </div>
+
+      <div class="col col-6">
+
+      </div>
+
+      <div class="col col-6">
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col-8">
+
+      </div>
+
+      <div class="col col-8">
+
+      </div>
+
+      <div class="col col-8">
+
+      </div>
+    </div>
 
 
    </body>
